# ilya_labs

./: CMakeLists.txt
laba1/: a.out  in.txt  out.txt  task1.c  task10.c  task3.c
laba1/task10/: task10.c
laba1/task2/: task2.c
laba1/task3/: task3.c
laba1/task4/: input.txt  task4.c
laba1/task5/: task5.c
laba1/task6/: task6.c
laba1/task7/: file1.txt  file2.txt  task7.c
laba1/task8/: a.out  in.txt  out.txt  task8.c
laba1/task9/: task9_1.c  task9_2.c
laba2/task1/: task1.c
laba2/task10/: task10.c
laba2/task2/: task2.c
laba2/task3/: task3.c
laba2/task4/: task4.c
laba2/task7/: task7.c
laba2/task8/: task8.c
laba2/task9/: task9.c
laba3/task1/: task1.c
laba3/task10/: input.txt  task10.c
laba3/task3/: input.txt  output.txt  task3.c
laba3/task5/: input.txt  out.txt  task5.c
laba4/task7/: input.txt  task7.c
laba5/task1/: task1.cpp
laba5/task2/: decryption.txt  encryption.txt  task2.cpp
laba5/task3/: task3.cpp
laba5/task4/: task4.cpp
laba5/task6/: task6.cpp
laba5/task7/: task7.cpp
